[gd_scene load_steps=5 format=3 uid="uid://c2s3gnbn1u8ee"]

[ext_resource type="PackedScene" uid="uid://y4u7prqsp0xc" path="res://boss/boss.tscn" id="1_2m0ip"]
[ext_resource type="Script" uid="uid://pivhiqu4ynfv" path="res://root_scenes/boss_round/boss_round.gd" id="1_x50sn"]
[ext_resource type="Script" uid="uid://7vw62jfhqglr" path="res://root_scenes/round/player_spawner.gd" id="2_tj4qp"]
[ext_resource type="Script" uid="uid://pse7mut484yx" path="res://root_scenes/round/player_container.gd" id="3_x50sn"]

[node name="BossRound" type="Node2D"]
script = ExtResource("1_x50sn")

[node name="Boss" parent="." instance=ExtResource("1_2m0ip")]
position = Vector2(403, 223)

[node name="PlayerSpawner" type="Node" parent="."]
script = ExtResource("2_tj4qp")
is_boss_round = true

[node name="PlayerContainer" type="Node" parent="PlayerSpawner"]
script = ExtResource("3_x50sn")

[node name="PlayerSpawn1" type="Marker2D" parent="PlayerSpawner"]
position = Vector2(168, 97)

[node name="PlayerSpawn2" type="Marker2D" parent="PlayerSpawner"]
position = Vector2(606, 100)

[node name="PlayerSpawn3" type="Marker2D" parent="PlayerSpawner"]
position = Vector2(190, 358)

[node name="PlayerSpawn4" type="Marker2D" parent="PlayerSpawner"]
position = Vector2(617, 380)

[node name="TweezerSpawnTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="RoundTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="TweezerSpawnTimer" to="." method="_on_tweezer_spawn_timer_timeout"]
[connection signal="timeout" from="RoundTimer" to="." method="_on_round_timer_timeout"]
